Updated result analyser

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ scenario/Thesis/*
 # Generayed traffic
 data/performance/OpenAP/rotor/aircraft_experiment.json
 thesis_tools/data/*
+thesis_tools/results/*
